RESOLVED FIXED308701
Unreviewed macOS build fix after 308251@main
https://bugs.webkit.org/show_bug.cgi?id=308701
Summary Unreviewed macOS build fix after 308251@main
Chris Dumez
Reported 2026-02-25 21:13:26 PST
Unreviewed macOS build fix after 308251@main.
Attachments
Chris Dumez
Comment 1 2026-02-25 21:16:30 PST
EWS
Comment 2 2026-02-25 21:24:32 PST
Committed 308258@main (466341d07730): <https://commits.webkit.org/308258@main> Reviewed commits have been landed. Closing PR #59478 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-25 21:25:11 PST
Note You need to log in before you can comment on or make changes to this bug.