Unreviewed macOS build fix after 308251@main https://bugs.webkit.org/show_bug.cgi?id=308701

Do a very partial revert of 308251@main to address the build errors on
internal macOS bots.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _protectedPage]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:
* Source/WebKit/UIProcess/mac/WKTextSelectionController.swift:
(WKTextSelectionController.addTextSelectionManager):
(WKTextSelectionController.selectionDidChange):
(WKTextSelectionController.insertionCursorRect):
(WKTextSelectionController.selectionIsInsertionPoint):
(WKTextSelectionController.isTextSelected(at:)):
(WKTextSelectionController.moveInsertionCursor(to:placeAtWordBoundary:)):
(WKTextSelectionController.showContextMenu(at:)):
(WKTextSelectionController.dragSelection(withGesture:completionHandler:)):
(WKTextSelectionController.beginRangeSelection(at:with:)):
(WKTextSelectionController.continueRangeSelection(at:)):
(WKTextSelectionController.endRangeSelection(at:)):

Canonical link: https://commits.webkit.org/308258@main