Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h
@@ -659,6 +659,7 @@ struct PerWebProcessState {
 
 - (WKPageRef)_pageForTesting;
 - (NakedPtr<WebKit::WebPageProxy>)_page;
+- (RefPtr<WebKit::WebPageProxy>)_protectedPage;
 #if PLATFORM(MAC)
 - (nullable WebKit::WebViewImpl *)_impl;
 #endif
